--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Library</title>
+
+    <link rel="stylesheet" href="style.css"/>
+    <script defer src="script.js"></script>
 </head>
 <body>
     
