--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    
+    <header>
+        <h1>My Library</h1>
+    </header>
 </body>
 </html>
