add button for adding book

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>My Library</h1>
+        <button class="add-btn"><span>+</span></button>
     </header>
 </body>
 </html>
