Add book object constructor

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+    <dialog id="add-book-dialog">
+        <p>test</p>
+    </dialog>
+
     <header>
         <h1>My Library</h1>
         <button class="add-btn"><span>+</span></button>
