Begin building modal for adding books

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 </head>
 <body>
     <dialog id="add-book-dialog">
-        <p>test</p>
+        <div class="modal-header">
+            <h2>Add Book</h2>
+            <button class="close-modal-btn">x</button>
+        </div>
+        
     </dialog>
 
     <header>
         <h1>My Library</h1>
-        <button class="add-btn"><span>+</span></button>
+        <button id="add-btn" class="add-btn"><span>+</span></button>
     </header>
 </body>
 </html>
