--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
             <button class="close-modal-btn">x</button>
         </div>
         
+        <form>
+            <div class="form-row">
+                <label for="title-input">Title</label>
+                <input type="text" name="title-input" id="title-input">
+            </div>
+
+            <div class="form-row">
+                <label for="author-input">Author</label>
+                <input type="text" name="author-input" id="author-input">
+            </div>
+        </form>
     </dialog>
 
     <header>
