--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
                 <label for="author-input">Author</label>
                 <input type="text" name="author-input" id="author-input">
             </div>
+
+            <div class="form-row">
+                <label for="number-of-pages-input">Number of Pages</label>
+                <input type="number" name="number-of-pages-input" id="number-of-pages-input" min="0" value="0">
+            </div>
+
+            <div class="form-row">
+                <label for="current-page-number">Current Page</label>
+                <input type="number" name="current-page-number" id="current-page-number" value="0">
+            </div>
+
+            <div class="form-row-col">
+                <input type="button" value="Cancel" class="cancel-btn close-modal-btn">
+                <input type="button" value="Submit" class="submit-btn">
+            </div>
         </form>
     </dialog>
 
