Book submission works, gets added to array

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </div>
 
             <div class="form-row">
-                <label for="current-page-number">Current Page</label>
-                <input type="number" name="current-page-number" id="current-page-number" value="0" required>
+                <label for="current-page-number-input">Current Page</label>
+                <input type="number" name="current-page-number-input" id="current-page-number-input" value="0" required>
             </div>
 
             <div class="form-row-col">
