--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <button id="add-btn" class="add-btn"><span>+</span></button>
     </header>
 
-    <div class="books-container">
+    <div id="books-container" class="books-container">
         <div class="book">
             <h3>The Hunger Games</h3>
             <p>Suzane colins</p>
