--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </div>
 
             <div class="form-row-col">
+                <input type="button" value="Cancel" class="cancel-btn close-modal-btn">
                 <input type="button" value="Delete" id="delete-btn" class="cancel-btn">
                 <input type="submit" value="Submit" class="submit-btn">
             </div>
