Add functionality to edit a book and fix bug related to 0 pages and 0 current page resulting in NaN

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="form-row-col">
                 <input type="button" value="Cancel" class="cancel-btn close-modal-btn">
                 <input type="button" value="Delete" id="delete-btn" class="cancel-btn">
-                <input type="submit" value="Submit" class="submit-btn">
+                <input type="submit" value="Update" class="submit-btn">
             </div>
         </form>
     </dialog>
